# rules_azure_kinect

./: WORKSPACE
Azure-Kinect-Sensor-SDK/: package.BUILD.bazel  repository.bzl
azure-c-shared-utility/: package.BUILD.bazel  repository.bzl
azure-macro-utils-c/: package.BUILD.bazel  repository.bzl
azure-umock-c/: package.BUILD.bazel  repository.bzl
cjson/: package.BUILD.bazel  repository.bzl
libusb/: package-debian.BUILD.bazel  package.BUILD.bazel  repository.bzl
libuvc/: package.BUILD.bazel  repository.bzl
spdlog/: package.BUILD.bazel  repository.bzl
turbojpeg/: package.BUILD.bazel  repository.bzl
util/: configure_file.bzl  generate_export_header.bzl
