# Copyright 2021 Shane Loretz
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


cc_library(
    name='azure_macro_utils_c',
    hdrs=glob(['inc/**/*.h']),
    includes=['inc/'],
    # strip_include_prefix='inc/macro_utils',
    # include_prefix='azure_macro_utils',
    visibility = ["//visibility:public"]
)
