# Copyright 2021 Shane Loretz
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


cc_import(
    name='libusb-1.0_private',
    hdrs=glob(['include/**']),
    shared_library='lib/libusb-1.0.so',
)

# Workaround https://github.com/bazelbuild/bazel/issues/4748
cc_library(
  name='libusb-1.0',
  hdrs=glob(['include/**']),
  includes=['include/'],
  deps = [":libusb-1.0_private"],
  visibility = ["//visibility:public"],
)
